hphp/hack/test/ifc/check/mut_array_assign.php.exp
=== IFC analysis results for mut_array_assign.php
File "mut_array_assign.php", line 48, characters 5-14:
Data with policy `I` appears in context `J`. (Typing[4379])
  File "mut_array_assign.php", line 5, characters 14-19:
  This may be the data source with policy `I`
  File "mut_array_assign.php", line 7, characters 14-19:
  This may be the data sink with policy `J`
  File "mut_array_assign.php", line 40, characters 7-11:
  Another program point contributing to the illegal flow
  File "mut_array_assign.php", line 41, characters 5-13:
  Another program point contributing to the illegal flow
  File "mut_array_assign.php", line 43, characters 5-13:
  Another program point contributing to the illegal flow
  File "mut_array_assign.php", line 45, characters 3-18:
  Another program point contributing to the illegal flow
File "mut_array_assign.php", line 28, characters 3-21:
Data with policy `I` appears in context `J`. (Typing[4379])
  File "mut_array_assign.php", line 5, characters 14-19:
  This may be the data source with policy `I`
  File "mut_array_assign.php", line 7, characters 14-19:
  This may be the data sink with policy `J`
  File "mut_array_assign.php", line 27, characters 3-21:
  Another program point contributing to the illegal flow
File "mut_array_assign.php", line 22, characters 3-21:
Data with policy `I` appears in context `J`. (Typing[4379])
  File "mut_array_assign.php", line 5, characters 14-19:
  This may be the data source with policy `I`
  File "mut_array_assign.php", line 7, characters 14-19:
  This may be the data sink with policy `J`
  File "mut_array_assign.php", line 21, characters 3-20:
  Another program point contributing to the illegal flow
File "mut_array_assign.php", line 35, characters 3-15:
Data with policy `J` appears in context `PUBLIC`. (Typing[4379])
  File "mut_array_assign.php", line 7, characters 14-19:
  This may be the data source with policy `J`
  File "mut_array_assign.php", line 9, characters 22-40:
  This may be the data sink with policy `PUBLIC`
  File "mut_array_assign.php", line 33, characters 3-15:
  Another program point contributing to the illegal flow
  File "mut_array_assign.php", line 34, characters 3-18:
  Another program point contributing to the illegal flow
File "mut_array_assign.php", line 34, characters 3-18:
Data with policy `I` appears in context `PUBLIC`. (Typing[4379])
  File "mut_array_assign.php", line 5, characters 14-19:
  This may be the data source with policy `I`
  File "mut_array_assign.php", line 9, characters 22-40:
  This may be the data sink with policy `PUBLIC`
  File "mut_array_assign.php", line 33, characters 3-15:
  Another program point contributing to the illegal flow
